--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack && node server/server.js"
+    "start": "webpack && nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
