--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "google-maps-react": "^1.0.19",
     "if-env": "^1.0.0",
     "mongoose": "^4.7.1",
     "react": "^0.14.7",
@@ -27,6 +28,7 @@
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.26.1",
     "http-server": "^0.8.5",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
