--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
     "crypto": "0.0.3",
