--- a/app/package.json
+++ b/app/package.json
@@ -11,27 +11,42 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "google-map-react": "^0.22.3",
     "google-maps-react": "^1.0.19",
     "if-env": "^1.0.0",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-google-maps": "^6.0.1",
+    "react-helmet": "^4.0.0",
+    "react-pure-render": "^1.0.2",
+    "react-router": "^2.0.0",
+    "react-side-effect": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.1",
     "http-server": "^0.8.5",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
+  },
+  "babel": {
+    "plugins": [
+      "syntax-class-properties",
+      "transform-class-properties"
+    ]
   }
 }
