--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
@@ -22,6 +24,8 @@
     "if-env": "^1.0.0",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-google-maps": "^6.0.1",
