--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^0.14.8",
     "react-google-maps": "^6.0.1",
     "react-helmet": "^4.0.0",
     "react-pure-render": "^1.0.2",
