--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "express": "^4.14.0",
