--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "express": "^4.14.0",
