--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.28.0",
     "bcrypt": "^1.0.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
@@ -26,6 +27,8 @@
     "if-env": "^1.0.0",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.5.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^0.14.7",
