--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "react": "^0.14.7",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^0.14.8",
+    "react-dropzone": "^3.12.2",
     "react-google-maps": "^6.0.1",
     "react-helmet": "^4.0.0",
     "react-pure-render": "^1.0.2",
