--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
+    "multer-imager": "^3.1.0",
     "multer-s3": "^2.5.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
