--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.3.0",
     "multer-imager": "^3.1.0",
     "multer-s3": "^2.5.0",
+    "nodemailer": "^4.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^0.14.7",
