--- a/app/package.json
+++ b/app/package.json
@@ -43,7 +43,18 @@
     "react-side-effect": "^1.1.0",
     "react-star-rating": "^1.4.2",
     "react-star-rating-component": "^1.2.4",
-    "react-stars": "^2.1.0"
+    "react-stars": "^2.1.0",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "http-server": "^0.8.5",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
