--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all --parallel watch:server watch:build",
-    "watch:build": "webpack app/",
-    "watch:server": "node app/server/server.js ./dist"
+    "start": "node app/server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,7 +27,6 @@
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "multer-imager": "^3.1.0",
-    "multer-s3": "^2.5.0",
     "nodemailer": "^4.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
