--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "multer-imager": "^3.1.0",
+    "multer-s3": "^2.5.0",
     "nodemailer": "^4.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -63,7 +64,7 @@
     ]
   },
   "engines": {
-        "node": "6.4.0",
-        "npm": "4.2.0"
-    } 
+    "node": "6.4.0",
+    "npm": "4.2.0"
+  }
 }
